# my-cookiecutters

./: .gitignore  README.md
librisk-plugins/: cookiecutter.json
librisk-plugins/hooks/: post_gen_project.py  pre_gen_project.py
librisk-plugins/librisk-{{cookiecutter.plugin_name}}/: .gitignore  AUTHORs.md  pyproject.toml
librisk-plugins/librisk-{{cookiecutter.plugin_name}}/src/librisk_{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py
librisk-plugins/librisk-{{cookiecutter.plugin_name}}/src/librisk_{{cookiecutter.project_slug}}/man/: load_man.py  {{cookiecutter.plugin_name}}.md
modelling/: cookiecutter.json
modelling/hooks/: post_gen_project.py  pre_gen_project.py
modelling/{{cookiecutter.project_name}}/: .gitignore  AUTHORS.md
modelling/{{cookiecutter.project_name}}/hooks/: post_gen_project.py  pre_gen_project.py
modelling/{{cookiecutter.project_name}}/src/: __init__.py  __main__.py  __version__.py  app.py  {{cookiecutter.project_slug}}
